--- a/plany/src/main/resources/static/index.html
+++ b/plany/src/main/resources/static/index.html
@@ -140,6 +140,18 @@
                                 id="taskEndDate" required>
                         </div>
                         <div class="mb-3">
+                            <label for="taskReminderMsg" class="form-label text-muted">Mensaje del Recordatorio
+                                (Opcional)</label>
+                            <input type="text" class="form-control rounded-pill p-3 border-light shadow-sm"
+                                id="taskReminderMsg" placeholder="Ej: Enviar el reporte semanal">
+                        </div>
+                        <div class="mb-3">
+                            <label for="taskReminderDate" class="form-label text-muted">Fecha del Recordatorio
+                                (Opcional)</label>
+                            <input type="date" class="form-control rounded-pill p-3 border-light shadow-sm"
+                                id="taskReminderDate">
+                        </div>
+                        <div class="mb-3">
                             <label for="taskPriority" class="form-label text-muted">Prioridad</label>
                             <select class="form-select rounded-pill p-3 border-light shadow-sm" id="taskPriority"
                                 required>
@@ -148,6 +160,12 @@
                                 <option value="1">Alta</option>
                                 <option value="2">Media</option>
                                 <option value="3">Baja</option>
+                            </select>
+                        </div>
+
+                        <div class="mb-3">
+                            <label for="taskType" class="form-label">Tipo</label>
+                            <select class="form-select" id="taskType" required>
                             </select>
                         </div>
                         <div class="mb-3">
